syntax = "proto3";
package ethereum;
//option go_package = "./ethereum";


import "ethereum/wallet.message.proto";

service EthereumWallet {
	rpc CreateWallet(CreateWalletInput) returns (CreateWalletOutput);
	rpc GetBalance(GetBalanceInput) returns (GetBalanceOutput);
}